access_output/udp: invalid check i_dts against vlc_tick_now()
Maybe once upon a time, dts is related to mdate(). But now, vlc_tick_now() and i_dts doesn't have the same start point.
So such check
i_date = vlc_tick_now() - i_date;
if ( i_date > VLC_TICK_FROM_MS(20) )
makes a lot of noise in log output.