sout/udp: add module for TS over raw UDP

This module does not pretend that UDP output is a regular access that
should be handled with the "standard" stream output.
This takes handles SAP much more cleanly and supports vector I/O to
avoid unnecessary memory copies.

Also fixes #26058.